--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
-<!-- Suelta tus manos y tu mente para solucionar este reto -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <header class="container-fluid">
+        <nav class="navbar-default">
+          <div class="container-fluid header">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#"><img src="assets/images/logoForma.png" alt="logo de labCard"></a>
+            </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class=" collapse navbar-collapse navbar-right ">
+              <ul class="nav navbar-nav">
+                <li><a href="#">Viaja</a></li>
+                <li><a href="#">Conduce</a></li>
+                <li><a href="#">Inicia sesion</a>
+                </li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+    </header>
+    <section>
+      <article class="row">
+        <div class="img-fondo">
+          <div class="form-registerer col-xs-9 col-sm-6 col-md-5">
+            <div class="version-mobile">
+              <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
+              <button class="btn btn-default">Descarga el app</button>
+            </div>
+            <div class="version-desktop">
+              <h3>Disfurta del viaje <br>
+                Eres dueño de tu tiempo</h3>
+                <div class="btn-register">
+                  <span>Viaja con</span>
+                  <img src="assets/images/logoBlanco.png" alt="logo de labcar">
+                </div>
+                <button class="btn btn-default">REGISTRATE</button>
+                <hr>
+                <button class="btn btn-default">Conviertete en un conductor</button>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
+    <main>
+        <div class="col-xs-12">
+          <img src="assets/images/iPhone6Plus.png" alt="celular iphone">
+        </div>
+        <div>
+          <h3>Descarga la nueva app</h3>
+          <p>La version actualizada de LabCar esta llena de nuevas funciones
+          para llegar a donde quieras aun mas facil y rapido</p>
+          <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
+        </div>
+
+    </main>
+    <!--
+    <aside>
+      <div class="">
+      <!--   <img src="assets/images/conduce.jpg" alt="auto">  -->  <!--
+        <div class="">
+          <h3>Conduce cuando quieras</h3>
+          <p>LabCar es una opcion flexible para alcanzar tus metas financieras.</p>
+          <button>Convierte en un conductor</button>
+        </div>
+      </div>
+    </aside>
+    <section>
+      <article>
+        <h3>Tarifas</h3>
+        <p>Consulta las tarifas LabCar aqui</p>
+        <div >
+          <img src="assets/images/shape.png" alt="">
+          <div> Ingrese su punto de partida </div>
+        </div>
+        <div >
+          <img src="assets/images/shape2.png" alt="">
+          <div> Ingrese su destino </div>
+        </div>
+        <button>!TRAZA TU RUTA!</button>
+      </article>
+      <article>
+        <img src="assets/images/mapa.jpg" alt="mapa de america del sur">
+      </article>
+    </section>
+    <footer>
+      <div class="">
+        <img src="assets/images/logoBlanco.png" alt="logo de labCar">
+        <hr>
+      </div>
+      <div >
+        <div>
+          <ul>
+            <li>Viaja</li>
+            <li>Conduce</li>
+            <li>Ciudades</li>
+            <li>Ciudades</li>
+            <li>Entregas</li>
+            <li>Como funciona?</li>
+            <li>Paises</li>
+            <li>Seguridad</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li>Oportunidades</li>
+            <li>Nuestra Historia</li>
+            <li>API de LabCar</li>
+            <li>Eventos</li>
+            <li>Desarrolladores</li>
+            <li>Servicios</li>
+            <li>Laboratoria</li>
+            <li>Coders</li>
+          </ul>
+        </div>
+        <div>
+          <img src="assets/images/appstore.png" alt="">
+          <img src="assets/images/enBadgeWebGeneric.png" alt="">
+        </div>
+      </div>
+      <hr>
+      <p> 2017 LabCar technologies.Inc.</p>
+    </footer>
+
+
+-->
+
+    <script type="text/javascript" src="vendors/bootstrap/js/jquery.js">
+    </script>
+    <script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js">
+    </script>
+    <script type="text/javascript" src="js/app.js">
+    </script>
+
+  </body>
+</html>
