añadiendo avance de la 2da seccion

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         </div><!-- /.container-fluid -->
       </nav>
     </header>
+
     <section>
-      <article class="row">
+      <article class="">
         <div class="img-fondo">
+
           <div class="form-registerer col-xs-9 col-sm-6 col-md-5">
             <div class="version-mobile">
               <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
@@ -54,22 +56,22 @@
                 <button class="btn btn-default">Conviertete en un conductor</button>
             </div>
           </div>
+
         </div>
       </article>
     </section>
-    <main>
-        <div class="col-xs-12">
-          <img src="assets/images/iPhone6Plus.png" alt="celular iphone">
-        </div>
-        <div>
-          <h3>Descarga la nueva app</h3>
-          <p>La version actualizada de LabCar esta llena de nuevas funciones
-          para llegar a donde quieras aun mas facil y rapido</p>
-          <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
-        </div>
 
+    <main class="">
+      <div class="aplication-movil img-phone col-xs-12 col-sm-12 col-md-4">
+      </div>
+      <div class="aplication-desktop col-md-4">
+        <h3><strong>Descarga la nueva app</strong></h3>
+        <p>La version actualizada de LabCar esta llena de nuevas funciones
+          para llegar a donde quieras aun mas facil y rapido</p>
+        <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
+        </div>
     </main>
-    <!--
+<!--
     <aside>
       <div class="">
       <!--   <img src="assets/images/conduce.jpg" alt="auto">  -->  <!--
