añadiendo clases y stylos a la 2da seccion

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     <section>
       <article class="">
         <div class="img-fondo">
-
           <div class="form-registerer col-xs-9 col-sm-6 col-md-5">
             <div class="version-mobile">
               <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
@@ -62,14 +61,18 @@
     </section>
 
     <main class="">
-      <div class="aplication-movil img-phone col-xs-12 col-sm-12 col-md-4">
-      </div>
-      <div class="aplication-desktop col-md-4">
-        <h3><strong>Descarga la nueva app</strong></h3>
-        <p>La version actualizada de LabCar esta llena de nuevas funciones
-          para llegar a donde quieras aun mas facil y rapido</p>
-        <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
+      <div class="aplication-movil">
+        <h3 class="title"><strong>La nueva app</strong></h3>
+        <div class=" img-phone col-xs-12  col-sm-4 col-sm-offset-1  col-md-4">
         </div>
+        <h3>llega a tu destino mas rapido</h3>
+        <div class="aplication-desktop col-sm-3 col-sm-offset-1 col-md-3">
+          <h2>Descarga la nueva app</h2>
+          <p>La version actualizada de LabCar esta llena de nuevas funciones
+            para llegar a donde quieras aun mas facil y rapido</p>
+          <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
+        </div>
+      </div>
     </main>
 <!--
     <aside>
