avance de la version mobile 2da seccion

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Lab Car</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header class="container-fluid">
+    <header>
         <nav class="navbar-default">
           <div class="container-fluid header">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -34,18 +35,22 @@
         </div><!-- /.container-fluid -->
       </nav>
     </header>
-
     <section>
-      <article class="">
-        <div class="img-fondo">
-          <div class="form-registerer col-xs-9 col-sm-6 col-md-5">
-            <div class="version-mobile">
-              <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
-              <button class="btn btn-default">Descarga el app</button>
+      <article class="img-fondo">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="form-registerer col-xs-10 col-xs-offset-2 visible-xs">
+              <div class="version-mobile  ">
+                <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
+                <button class="btn btn-default">Descarga el app</button>
+              </div>
             </div>
-            <div class="version-desktop">
-              <h3>Disfurta del viaje <br>
-                Eres dueño de tu tiempo</h3>
+          </div>
+          <div class="row">
+            <div class="form-registerer col-sm-5 col-md-5 hidden-xs">
+              <div class="version-desktop">
+                <h3>Disfurta del viaje <br>
+                    Eres dueño de tu tiempo</h3>
                 <div class="btn-register">
                   <span>Viaja con</span>
                   <img src="assets/images/logoBlanco.png" alt="logo de labcar">
@@ -53,27 +58,36 @@
                 <button class="btn btn-default">REGISTRATE</button>
                 <hr>
                 <button class="btn btn-default">Conviertete en un conductor</button>
+              </div>
             </div>
           </div>
-
         </div>
       </article>
     </section>
-
-    <main class="">
-      <div class="aplication-movil">
-        <h3 class="title"><strong>La nueva app</strong></h3>
-        <div class=" img-phone col-xs-12  col-sm-4 col-sm-offset-1  col-md-4">
+    <main>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="section-download-app col-xs-12 visible-xs ">
+            <div class=" img-phone">
+              <h1 class="title">La nueva app </h1>
+            </div>
+            <h3>llega a tu destino mas rapido</h3>
+          </div>
         </div>
-        <h3>llega a tu destino mas rapido</h3>
-        <div class="aplication-desktop col-sm-3 col-sm-offset-1 col-md-3">
-          <h2>Descarga la nueva app</h2>
-          <p>La version actualizada de LabCar esta llena de nuevas funciones
-            para llegar a donde quieras aun mas facil y rapido</p>
-          <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
+        <div class="row hidden-xs section-download-app">
+          <div class=" img-phone col-sm-4 "> </div>
+          <div class=" col-sm-4">
+            <h2>Descarga la nueva app</h2>
+            <p>La version actualizada de LabCar esta llena de nuevas funciones
+              para llegar a donde quieras aun mas facil y rapido</p>
+            <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
+          </div>
+
         </div>
       </div>
     </main>
+
+
 <!--
     <aside>
       <div class="">
