--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>
+    <header>    <!-- version movil menu hamburguesa -->
         <nav class="navbar-default">
           <div class="container-fluid header">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -23,7 +22,7 @@
               <a class="navbar-brand" href="#"><img src="assets/images/logoForma.png" alt="logo de labCard"></a>
             </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
+  <!--barra de navegacion -  version desktoop  -->
             <div class=" collapse navbar-collapse navbar-right ">
               <ul class="nav navbar-nav">
                 <li><a href="#">Viaja</a></li>
@@ -31,25 +30,25 @@
                 <li><a href="#">Inicia sesion</a>
                 </li>
               </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+            </div>
+        </div>
       </nav>
     </header>
-    <section>
+    <section>    <!-- imagen de fondo -->
       <article class="img-fondo">
         <div class="container-fluid">
-          <div class="row">
+          <div class="row">  <!-- formulario de registro  version movil -->
             <div class="form-registerer col-xs-10 col-xs-offset-2 visible-xs">
               <div class="version-mobile  ">
                 <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
                 <button class="btn btn-default">Descarga el app</button>
               </div>
             </div>
-          </div>
+          </div>  <!-- formulario de registro  version desktop -->
           <div class="row">
             <div class="form-registerer col-sm-5 col-md-5 hidden-xs">
               <div class="version-desktop">
-                <h3>Disfurta del viaje <br>
+                <h3>Disfruta del viaje <br>
                     Eres dueño de tu tiempo</h3>
                 <div class="btn-register">
                   <span>Viaja con</span>
@@ -64,7 +63,7 @@
         </div>
       </article>
     </section>
-    <main>
+    <main> <!-- 2da seccion img iphone -  version movil -->
       <div class="container-fluid">
         <div class="row">
           <div class="section-download-app col-xs-12 visible-xs ">
@@ -73,32 +72,33 @@
             </div>
             <h3>llega a tu destino mas rapido</h3>
           </div>
-        </div>
-        <div class="row hidden-xs section-download-app">
-          <div class=" img-phone col-sm-4 "> </div>
-          <div class=" col-sm-4">
-            <h2>Descarga la nueva app</h2>
+        </div>   <!-- 2da seccion img iphone -  version desktop -->
+        <div class="row hidden-xs section-download-app ">
+          <div class=" img-phone col-sm-3 col-sm-offset-1"> </div>
+          <div class=" col-sm-3 col-sm-offset-1">
+            <h3>Descarga la nueva app</h3>
             <p>La version actualizada de LabCar esta llena de nuevas funciones
               para llegar a donde quieras aun mas facil y rapido</p>
             <p>Con solo tocar un boton, un auto llega justo a tu ubicacion. Subete y no te preocupes: tu conductor sabe exactamente a donde ir.</p>
           </div>
-
         </div>
       </div>
     </main>
-
-
-<!--
+    <!-- 3era seccion version movil-->
     <aside>
-      <div class="">
-      <!--   <img src="assets/images/conduce.jpg" alt="auto">  -->  <!--
-        <div class="">
-          <h3>Conduce cuando quieras</h3>
-          <p>LabCar es una opcion flexible para alcanzar tus metas financieras.</p>
-          <button>Convierte en un conductor</button>
+      <div class="img-driver"> <!--imagen de fondo -->
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-11 col-xs-offset-1 text-container">
+              <h2>Conduce cuando quieras</h2>
+              <p>LabCar es una opcion flexible para alcanzar tus metas <br> financieras.</p>
+              <button class="btn btn-default boton">Convierte en un conductor</button>
+            </div>
+          </div>
         </div>
       </div>
     </aside>
+    <!--
     <section>
       <article>
         <h3>Tarifas</h3>
