añadiendo 4ta seccion Tarifas version movil

--- a/index.html
+++ b/index.html
@@ -92,31 +92,37 @@
             <div class="col-xs-11 col-xs-offset-1 text-container">
               <h2>Conduce cuando quieras</h2>
               <p>LabCar es una opcion flexible para alcanzar tus metas <br> financieras.</p>
-              <button class="btn btn-default boton">Convierte en un conductor</button>
+              <button class="btn btn-default color-found">Convierte en un conductor</button>
             </div>
           </div>
         </div>
       </div>
     </aside>
-    <!--
-    <section>
-      <article>
-        <h3>Tarifas</h3>
-        <p>Consulta las tarifas LabCar aqui</p>
-        <div >
-          <img src="assets/images/shape.png" alt="">
-          <div> Ingrese su punto de partida </div>
+
+    <section class="container-fluid color-found">
+      <article class="row">
+        <div class="col-xs-12">
+          <h2><strong>Tarifas</strong></h2>
+          <h3>Consulta las tarifas LabCar aqui</h3>
+            <div class="section-inputs">
+              <div class="input-group">
+                <img src="assets/images/shape.png" alt="">
+                <input type="text" class="form-control camp-text"value ="Ingrese su punto de partida">
+              </div>
+              <div class="input-group">
+                <img src="assets/images/shape2.png" alt="">
+                <input type="text" class="form-control camp-text"value ="Ingrese su destino">
+              </div>
+            </div>
+          <button class="btn btn-default center-block boton">!TRAZA TU RUTA!</button>
         </div>
-        <div >
-          <img src="assets/images/shape2.png" alt="">
-          <div> Ingrese su destino </div>
+
+        <div class="class=col-xs-12">
+          <img class="img-responsive" src="assets/images/mapa.jpg" alt="mapa de america del sur">
         </div>
-        <button>!TRAZA TU RUTA!</button>
-      </article>
-      <article>
-        <img src="assets/images/mapa.jpg" alt="mapa de america del sur">
       </article>
     </section>
+    <!--
     <footer>
       <div class="">
         <img src="assets/images/logoBlanco.png" alt="logo de labCar">
