--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </div>
     </aside>
-
+<!-- 4era seccion TARIFAS version movil-->
     <section class="container-fluid color-found">
       <article class="row">
         <div class="col-xs-12">
@@ -115,10 +115,10 @@
               </div>
             </div>
           <button class="btn btn-default center-block boton">!TRAZA TU RUTA!</button>
-        </div>
-
-        <div class="class=col-xs-12">
-          <img class="img-responsive" src="assets/images/mapa.jpg" alt="mapa de america del sur">
+          <div> 11 </div>
+        </div> <!--4era seccion IMG-Google maps version movil-->
+        <div class="col-xs-10 col-xs-offset-1 img-ruta-movil">
+          <div class="img-ruta"></div> <!-- contenedor de imagen  -->
         </div>
       </article>
     </section>
