añadiendo footer version movil

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="fonts/style.css">
   </head>
   <body>
     <header>    <!-- version movil menu hamburguesa -->
@@ -99,7 +100,7 @@
       </div>
     </aside>
 <!-- 4era seccion TARIFAS version movil-->
-    <section class="container-fluid color-found">
+    <section class="container-fluid color-found section-container">
       <article class="row">
         <div class="col-xs-12">
           <h2><strong>Tarifas</strong></h2>
@@ -122,48 +123,60 @@
         </div>
       </article>
     </section>
-    <!--
-    <footer>
-      <div class="">
-        <img src="assets/images/logoBlanco.png" alt="logo de labCar">
+
+    <footer>   <!-- contenedor del footer version-mobile  -->
+        <div class="img-logo">
+          <img src="assets/images/logoBlanco.png"   alt="logo de labCar">
+          <hr>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <ul class="col-xs-2 messy-lists">
+                <li>Viaja</li>
+                <li>Conduce</li>
+                <li>Ciudades</li>
+                <li>Ciudades</li>
+                <li>Entregas</li>
+                <li>Como funciona?</li>
+                <li>Paises</li>
+                <li>Seguridad</li>
+              </ul>
+            <div class="hidden-xs">
+              <ul>
+                <li>Oportunidades</li>
+                <li>Nuestra Historia</li>
+                <li>API de LabCar</li>
+                <li>Eventos</li>
+                <li>Desarrolladores</li>
+                <li>Servicios</li>
+                <li>Laboratoria</li>
+                <li>Coders</li>
+              </ul>
+            </div>
+            <!-- iconos de footer de icomoon  -->
+            <div class="col-xs-4 col-xs-offset-5 ">
+              <div class="content-icons">
+                <span class="icon-facebook"></span>
+                <span class="icon-twitter"></span>
+                <span class="icon-linkedin"></span>
+                <span class="icon-apple"></span>
+                <span class="icon-play"></span>
+              </div>
+              <div class="logo-footer">   <!-- logos de google play y apple  -->
+                <img class="" src="assets/images/enBadgeWebGeneric.png" alt="logo google play">
+                <img class="" src="assets/images/appstore.png" alt="logo apple">
+              </div>
+            </div>
+          </div>
+
         <hr>
+        <p> © 2017 LabCar technologies.Inc.</p>
       </div>
-      <div >
-        <div>
-          <ul>
-            <li>Viaja</li>
-            <li>Conduce</li>
-            <li>Ciudades</li>
-            <li>Ciudades</li>
-            <li>Entregas</li>
-            <li>Como funciona?</li>
-            <li>Paises</li>
-            <li>Seguridad</li>
-          </ul>
-        </div>
-        <div>
-          <ul>
-            <li>Oportunidades</li>
-            <li>Nuestra Historia</li>
-            <li>API de LabCar</li>
-            <li>Eventos</li>
-            <li>Desarrolladores</li>
-            <li>Servicios</li>
-            <li>Laboratoria</li>
-            <li>Coders</li>
-          </ul>
-        </div>
-        <div>
-          <img src="assets/images/appstore.png" alt="">
-          <img src="assets/images/enBadgeWebGeneric.png" alt="">
-        </div>
       </div>
-      <hr>
-      <p> 2017 LabCar technologies.Inc.</p>
     </footer>
 
 
--->
+
 
     <script type="text/javascript" src="vendors/bootstrap/js/jquery.js">
     </script>
