corrigiendo errores version movil finalizado

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img src="assets/images/logoBlanco.png"   alt="logo de labCar">
           <hr>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid container-footer">
           <div class="row">
               <ul class="col-xs-2 messy-lists">
                 <li>Viaja</li>
