añadiendo 3era seccion version desktop

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
       <article class="img-fondo">
         <div class="container-fluid">
           <div class="row">  <!-- formulario de registro  version movil -->
-            <div class="form-registerer col-xs-10 col-xs-offset-2 visible-xs">
-              <div class="version-mobile  ">
+            <div class="form-registerer color-found col-xs-10 col-xs-offset-2 visible-xs">
+              <div class="version-mobile">
                 <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
                 <button class="btn btn-default">Descarga el app</button>
               </div>
             </div>
           </div>  <!-- formulario de registro  version desktop -->
           <div class="row">
-            <div class="form-registerer col-sm-5 col-md-5 hidden-xs">
+            <div class="color-found form-registerer col-sm-5 col-md-5 hidden-xs">
               <div class="version-desktop">
                 <h3>Disfruta del viaje <br>
                     Eres dueño de tu tiempo</h3>
@@ -67,14 +67,14 @@
     <main> <!-- 2da seccion img iphone -  version movil -->
       <div class="container-fluid">
         <div class="row">
-          <div class="section-download-app col-xs-12 visible-xs ">
+          <div class="section-download-app color-found col-xs-12 visible-xs ">
             <div class=" img-phone">
-              <h1 class="title">La nueva app </h1>
+              <h3 class="text-center">La nueva app </h3>
             </div>
-            <h3>llega a tu destino mas rapido</h3>
+            <h4 class="logo-footer">llega a tu destino aun mas rapido</h4>
           </div>
         </div>   <!-- 2da seccion img iphone -  version desktop -->
-        <div class="row hidden-xs section-download-app ">
+        <div class="row hidden-xs section-download-app color-found">
           <div class=" img-phone col-sm-3 col-sm-offset-1"> </div>
           <div class=" col-sm-3 col-sm-offset-1">
             <h3>Descarga la nueva app</h3>
@@ -88,17 +88,18 @@
     <!-- 3era seccion version movil-->
     <aside>
       <div class="img-driver"> <!--imagen de fondo -->
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-11 col-xs-offset-1 text-container">
-              <h2>Conduce cuando quieras</h2>
-              <p>LabCar es una opcion flexible para alcanzar tus metas <br> financieras.</p>
+        <div class="container-fluid">
+          <div class="row">  <!--agregando columnas para la version desktop -->
+            <div class="col-xs-12  col-sm-4 col-sm-offset-8 color-letra driver">
+              <h3> <strong>Conduce cuando quieras</strong></h3>
+              <p>LabCar es una opcion flexible para alcanzar tus metas financieras.</p>
               <button class="btn btn-default color-found">Convierte en un conductor</button>
             </div>
           </div>
         </div>
       </div>
     </aside>
+
 <!-- 4era seccion TARIFAS version movil-->
     <section class="container-fluid color-found section-container">
       <article class="row">
@@ -162,9 +163,9 @@
                 <span class="icon-apple"></span>
                 <span class="icon-play"></span>
               </div>
-              <div class="logo-footer">   <!-- logos de google play y apple  -->
-                <img class="" src="assets/images/enBadgeWebGeneric.png" alt="logo google play">
-                <img class="" src="assets/images/appstore.png" alt="logo apple">
+              <div>   <!-- logos de google play y apple  -->
+                <img class="logo-footer img-responsive" src="assets/images/enBadgeWebGeneric.png" alt="logo google play">
+                <img class="logo-footer img-responsive" src="assets/images/appstore.png" alt="logo apple">
               </div>
             </div>
           </div>
