--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <article class="img-fondo">
         <div class="container-fluid">
           <div class="row">  <!-- formulario de registro  version movil -->
-            <div class="form-registerer color-found col-xs-10 col-xs-offset-2 visible-xs">
+            <div class="form-registerer color-found col-xs-10 col-xs-offset-2 visible-xs mobile">
               <div class="version-mobile">
                 <h1>Comienza a viajar <br> con   <img src="assets/images/logoBlanco.png" alt="logo de labcar"></h1>
                 <button class="btn btn-default">Descarga el app</button>
@@ -47,7 +47,7 @@
             </div>
           </div>  <!-- formulario de registro  version desktop -->
           <div class="row">
-            <div class="color-found form-registerer col-sm-5 col-md-5 hidden-xs">
+            <div class="color-found form-registerer col-sm-5 col-md-5 hidden-xs desktop">
               <div class="version-desktop">
                 <h3>Disfruta del viaje <br>
                     Eres dueño de tu tiempo</h3>
