--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- 4era seccion TARIFAS version movil-->
     <section class="container-fluid color-found section-container">
       <article class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-5">
           <h2><strong>Tarifas</strong></h2>
           <h3>Consulta las tarifas LabCar aqui</h3>
             <div class="section-inputs">
@@ -116,10 +116,10 @@
                 <input type="text" class="form-control camp-text"value ="Ingrese su destino">
               </div>
             </div>
-          <button class="btn btn-default center-block boton">!TRAZA TU RUTA!</button>
-          <div> 11 </div>
+          <button class="btn btn-default center-block boton">!TRAZAR RUTA!</button>
+          <div class="visible-xs"> 11 </div>
         </div> <!--4era seccion IMG-Google maps version movil-->
-        <div class="col-xs-10 col-xs-offset-1 img-ruta-movil">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-5 img-ruta-movil">
           <div class="img-ruta"></div> <!-- contenedor de imagen  -->
         </div>
       </article>
