añadiendo footer version desktop

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
           </div>  <!-- formulario de registro  version desktop -->
           <div class="row">
-            <div class="color-found form-registerer col-sm-5 col-md-5 hidden-xs desktop">
+            <div class="color-found form-registerer col-sm-5 col-lg-4 hidden-xs desktop">
               <div class="version-desktop">
                 <h3>Disfruta del viaje <br>
                     Eres dueño de tu tiempo</h3>
@@ -125,14 +125,15 @@
       </article>
     </section>
 
-    <footer>   <!-- contenedor del footer version-mobile  -->
+    <footer>
+      <div>  <!-- contenedor del footer version-mobile  -->
         <div class="img-logo">
           <img src="assets/images/logoBlanco.png"   alt="logo de labCar">
           <hr>
         </div>
         <div class="container-fluid container-footer">
           <div class="row">
-              <ul class="col-xs-2 messy-lists">
+              <ul class="col-xs-2 col-sm-offset-3 messy-lists list-unstyled">
                 <li>Viaja</li>
                 <li>Conduce</li>
                 <li>Ciudades</li>
@@ -142,8 +143,8 @@
                 <li>Paises</li>
                 <li>Seguridad</li>
               </ul>
-            <div class="hidden-xs">
-              <ul>
+            <div class="hidden-xs ">
+              <ul class=" col-sm-2 col-sm-offset-1 messy-lists list-unstyled">
                 <li>Oportunidades</li>
                 <li>Nuestra Historia</li>
                 <li>API de LabCar</li>
@@ -155,7 +156,7 @@
               </ul>
             </div>
             <!-- iconos de footer de icomoon  -->
-            <div class="col-xs-4 col-xs-offset-5 ">
+            <div class="col-xs-4 col-xs-offset-5 visible-xs">
               <div class="content-icons">
                 <span class="icon-facebook"></span>
                 <span class="icon-twitter"></span>
@@ -163,21 +164,29 @@
                 <span class="icon-apple"></span>
                 <span class="icon-play"></span>
               </div>
-              <div>   <!-- logos de google play y apple  -->
+              <div class="visible-xs">   <!-- logos de google play y apple  -->
                 <img class="logo-footer img-responsive" src="assets/images/enBadgeWebGeneric.png" alt="logo google play">
                 <img class="logo-footer img-responsive" src="assets/images/appstore.png" alt="logo apple">
               </div>
+            </div> <!-- iconos, logo version desktop  -->
+
+            <div class=" hidden-xs col-sm-2 col-sm-pull-8 position-icons ">
+              <span class="icon-facebook"></span>
+              <span class="icon-twitter"></span>
+              <span class="icon-linkedin"></span>
+              <span class="icon-apple"></span>
+              <span class="icon-play"></span>
+            </div>
+            <div class=" hidden-xs col-sm-2 col-sm-pull-1 position">
+              <img class="logo-footer img-responsive" src="assets/images/enBadgeWebGeneric.png"     alt="logo google play">
+              <img class="logo-footer img-responsive" src="assets/images/appstore.png" alt="logo apple">
             </div>
           </div>
-
-        <hr>
-        <p> © 2017 LabCar technologies.Inc.</p>
-      </div>
+          <hr>
+          <p> © 2017 LabCar technologies.Inc.</p>
+        </div>
       </div>
     </footer>
-
-
-
 
     <script type="text/javascript" src="vendors/bootstrap/js/jquery.js">
     </script>
